5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1100.log
== TEST (2019-04-28 14:54:29) 
-- CODE:
x = int(input("valor da cedula: "))
print("Entrada:",x)

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100)
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 20
    if(x == 100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:54:43) 
-- CODE:
x = int(input("valor da cedula: "))
print("Entrada:",x)

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100)
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 20
    if(x == 100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:55:19) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100)
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 19
    if(x == 100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:55:55) 
-- CODE:
x = input("valor da cedula: ")

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100)
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 19
    if(x == 100)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:56:32) 
-- CODE:
x = input("valor da cedula: ")

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 20
    print("Animal: Garoupa")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:57:51) 
-- CODE:
x = input("valor da cedula: ")

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
						print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- ERROR:
File "XXXX", line 20
    print("Animal: Garoupa")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:58:11) 
-- CODE:
x = input("valor da cedula: ")

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:59:06) 
-- CODE:
x = input("valor da cedula: ")

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:00:21) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:00:29) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:00:35) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- EXECUTION TIME:
0.129312
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:01:12) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:01:19) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:01:58) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:11) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:32) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:36) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:39) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:41) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:06:53) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:07:00) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:09:41) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:09:45) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- EXECUTION TIME:
0.206138
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:11:13) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:11:20) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
else:
	print("Animal: Invalido")
	
	




-- EXECUTION TIME:
0.160139
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:16:14) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:16:21) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:16:24) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:16:29) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:16:32) 
-- CODE:
x = int(input("valor da cedula: "))

if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:17:12) 
-- CODE:
x = int(input("valor da cedula: "))
print(x)
if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 15:17:48) 
-- CODE:
x = int(input("valor da cedula: "))
print("Entrada:", x)
if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 15:17:55) 
-- CODE:
x = int(input("valor da cedula: "))
print("Entrada:", x)
if((x == 2) or (x == 5) or (x == 10) or (x == 20) or (x == 50) or (x == 100)):
	if(x == 2):
		print("Animal: Tartaruga")
	else:
		if(x == 5):
			print("Animal: Garca")
		else:
			if(x == 10):
				print("Animal: Arara")
			else:
				if(x == 20):
					print("Animal: Mico-leao-dourado")
				else:
					if(x == 50):
						print("Animal: Onca-pintada")
					else:
						if(x == 100):
							print("Animal: Garoupa")
						else:
							print("Animal: Invalido")
else:
	print("Animal: Invalido")
	
	




-- EXECUTION TIME:
0.152524
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
